discussion/kv_engine/170266/170266_rev16_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: FollyExecutorPool cancel tasks in cpuPool queue

Add a mechanism to remove work for a given taskable from the
cpuPool queue.

This is implemented by interposing our own queue of work underneath
the queue in the cpuPool to allow us to remove tasks from the queue
when we unregister a taskable. Now, when we schedule a task we
enqueue it in a queue in a custom executor and schedule a task on the
base executor to pop a task from the queue and run it. To remove tasks
when we unregister a taskable we pop all elements of our queue and
re-push only those of the other taskables and manually cancel each
task for the taskable going away.

Change-Id: Idcbf1737b80c3d3b92ed62adb3d4d164a2cf4266

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-10 16:35:21.000000000
Message: 
Uploaded patch set 16.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-10 17:09:20.000000000
Message: 
Patch Set 16: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43803/ : ABORTED

Timeout of a CTest test 139/421 Test  #58: ep-engine_ep_unit_tests.DCPTest ...............................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43803/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43803/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16316/ : ABORTED

Timeout of a CTest test [2022-02-10T16:48:25.719Z]   4/441 Test #305: ep_testsuite_dcp.value_eviction.magma .......................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16316/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16316/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5208/ : ABORTED

Test exceeded the timeout:
[2022-02-10T16:46:56.091Z] Running [0000/0093]: test dcp vbtakeover stat no stream.../usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5208/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5208/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17541/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18275/ : ABORTED

Timeout of a CTest test [2022-02-10T17:04:48.289Z]   8/415 Test #300: ep_perfsuite.value_eviction .................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18275/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18275/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17233/ : ABORTED

Timeout of a CTest test [2022-02-10T17:01:44.967Z]  88/422 Test #194: ep-engine_ep_unit_tests.PersistentAndEphemeral/ConnectionTest ...............................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17233/ )

Test exceeded the timeout:
[2022-02-10T16:44:43.587Z] Running [0001/0093]: test open consumer.../usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17233/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17233/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25640/ : ABORTED

Test exceeded the timeout:
[2022-02-10T17:02:55.472Z] Running [0000/0093]: test dcp vbtakeover stat no stream.../usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25640/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25640/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15499/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15499/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15499/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5147/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5147/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14341/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36935/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
